--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,13 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {}
+  "features": {},
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "replit.code-runner",
+        "esbenp.prettier-vscode",
+        "humao.rest-client"
+      ]
+    }
+  }
 }
